--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>С Днем рождения!</title>
+    <title>🎉 С Днем рождения!</title>
     <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
-</head>g
+</head>
 
     <div class="columns">
         <div class="columns__column--a">
@@ -16,9 +16,18 @@
                 <h1> Кристина, </h1>
                 <p>
                     Поздравляю тебя с 28-ым Днем рождения. <br/>
-                    Желаю успехов <br/>
-                    Развития творческого, профессионального <br/>
-                    Душевного спокойствия <br/>
+                    Желаю
+                    <ul>
+                        <li>
+                            творческого развития в самых разных проявления (и игре на ф-но, и даже пении для себя, так как это очень душевно),
+                        </li>
+                        <li>
+                            профессионального успеха, постоянно двигаться вперед и это всегда будет приводить к чему-то лучшему
+                        </li>
+                        <li>
+                            душевного спокойствия и оставаться всегда самодостаточной личностью 😊
+                        </li>
+                    </ul>
                 </p>
             </div>
         </div>
