Make better for portrait mobile

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
     <div class="columns">
@@ -15,8 +16,7 @@
             <div class="columns__column--a--text">
                 <h1> Кристина, </h1>
                 <p>
-                    Поздравляю тебя с 28-ым Днем рождения. <br/>
-                    Желаю
+                    Поздравляю тебя с 28-ым Днем рождения. Желаю <br/>
                     <ul>
                         <li>
                             творческого развития в самых разных проявления (и игре на ф-но, и даже пении для себя, так как это очень душевно),
