--- a/index.html
+++ b/index.html
@@ -16,18 +16,11 @@
             <div class="columns__column--a--text">
                 <h1> Кристина, </h1>
                 <p>
-                    Поздравляю тебя с 28-ым Днем рождения. Желаю <br/>
-                    <ul>
-                        <li>
-                            творческого развития в самых разных проявления (и игре на ф-но, и даже пении для себя, так как это очень душевно),
-                        </li>
-                        <li>
-                            профессионального успеха, постоянно двигаться вперед и это всегда будет приводить к чему-то лучшему
-                        </li>
-                        <li>
-                            душевного спокойствия и оставаться всегда самодостаточной личностью 😊
-                        </li>
-                    </ul>
+                    Поздравляю тебя с Днем рождения. Желаю
+                    творческого развития в самых разных проявлениях (и игре на фортепиано, и даже пении для себя, так как это очень душевно),
+                    профессионального успеха, постоянно двигаться вперед и это всегда будет приводить к чему-то лучшему
+                    душевного спокойствия и
+                    оставаться всегда самодостаточной личностью 😊
                 </p>
             </div>
         </div>
@@ -35,7 +28,7 @@
         <div class="columns__column--b">
             <div class="columns__column-inner">
                 <div class="intro-cta">
-                    <button class="intro-cta__button"> Встретиться </button>
+                    <button class="intro-cta__button"> Получить чашечку чая </button>
                     <div class="intro-cta__hands"></div>
                 </div>
             </div>
